--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "chart.js": "^4.4.9",
     "pinia": "^2.1.7",
     "vue": "^3.5.0",
     "vue-i18n": "^9.14.4",
